# New-York-CivicSphere

./: README.md
.github/workflows/: azure-deploy.yml  main_ny-civicsphere.yml
backend/: .env  env.example  pyproject.toml  requirements.txt  startup.sh
backend/app/: __init__.py  config.py  main.py  sample_data.py  schemas.py
backend/app/clients/: azure_functions.py  azure_openai.py  azure_search.py  cosmos.py  nyc_calendar.py  nyc_calendar_alerts.py
backend/app/repositories/: dashboard.py  forum.py
backend/ny_civic_sphere_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/static/: index.html
backend/static/assets/: index-BJC_bzK2.css  index-BRdFQYgI.js  index-BptNfFik.js  index-C70FnWEZ.js  index-CHH5aeYl.css  index-CJPTODoM.css  index-CZabIUYX.js  index-DrxO1naB.css  index-Dx8LrHQw.js  index-Vq6-4zAy.js  index-b6fu-HAk.js  index-qBsLbZ4q.css  index-vNvN0Lkj.css
docs/: api-reference.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/alerts/: ServiceAlertsTimeline.tsx
frontend/src/components/dashboard/: AIChatLauncher.tsx  ActivityPulse.tsx  CommunitySnapshot.tsx  DiscussionsList.tsx  ElectionsPanel.tsx  EventsPanel.tsx  FeaturedStories.tsx  PoliciesList.tsx
frontend/src/components/events/: EventsTimeline.tsx
frontend/src/hooks/: useAISummary.ts  useDashboard.ts  useTypingAnimation.ts
frontend/src/services/: api.ts
frontend/src/types/: chat.ts  dashboard.ts  forum.ts
(+7 files in other folders)
