[project]
name = "ny-civic-sphere-backend"
version = "0.1.0"
description = "FastAPI backend for NY Civic Sphere"
authors = [{ name = "NY Civic Sphere Team" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.3.0",
    "azure-cosmos>=4.7.0",
    "azure-functions>=1.20.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "azure-search-documents>=11.4.0",
    "openai>=1.0.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

